--- a/css/styles.css
+++ b/css/styles.css
@@ -442,7 +442,8 @@ img {
   line-height: 1.5;
   letter-spacing: 0.32px;
 }
-.socials-title {
+
+.column-title {
   color: #fff;
   font-weight: 500;
   line-height: 1.5;
@@ -465,4 +466,100 @@ img {
 .footer .socials-link:hover,
 .footer .socials-link:focus {
   background-color: #31d0aa;
+}
+.footer .column-3 {
+  margin-left: auto;
+}
+/* footer-form */
+.subscribe-form {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+.subscribe-input {
+  width: 264px;
+  height: 40px;
+  padding: 8px 16px;
+
+  outline: transparent;
+  border-radius: 4px;
+  border: 1px solid #fff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  background-color: transparent;
+
+  color: #fff;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+}
+.subscribe-input::placeholder {
+  color: #fff;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+}
+.subscribe-btn {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+
+  color: #fff;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  border-radius: 4px;
+  background: #4d5ae5;
+
+  padding: 8px 24px;
+}
+.subscribe-icon {
+  fill: currentColor;
+}
+/* modal wimdows */
+.backdrop {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.backdrop.is-open {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100vw;
+  height: 100vh;
+
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial;
+}
+.modal {
+  width: 408px;
+  height: 584px;
+  padding: 24px;
+}
+.close-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 24px;
+  height: 24px;
+  margin-left: auto;
+  margin-bottom: 24px;
+
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+}
+.modal-title {
+  margin-bottom: 16px;
+
+  color: #2e2f42;
+  text-align: center;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
