--- a/css/styles.css
+++ b/css/styles.css
@@ -531,6 +531,8 @@ img {
   width: 100vw;
   height: 100vh;
 
+  background-color: rgba(46, 47, 66, 0.4);
+
   opacity: 1;
   visibility: visible;
   pointer-events: initial;
@@ -539,6 +541,11 @@ img {
   width: 408px;
   height: 584px;
   padding: 24px;
+
+  border-radius: 4px;
+  background: #fcfcfc;
+  box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+    0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
 }
 .close-btn {
   display: flex;
@@ -553,6 +560,13 @@ img {
   background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.close-btn:active {
+  background-color: #ffffff;
 }
 .modal-title {
   margin-bottom: 16px;
@@ -562,4 +576,49 @@ img {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+.modal-label {
+  display: block;
+
+  color: #8e8f99;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+
+  margin-bottom: 4px;
+}
+.modal-input {
+  width: 360px;
+  height: 40px;
+
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+
+  margin-bottom: 8px;
+}
+.input-wrapper {
+  position: relative;
+}
+.input-icon {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+}
+.modal-comment {
+  width: 100%;
+  height: 120px;
+  resize: none;
+
+  padding: 8px 16px;
+  margin-bottom: 16px;
+
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+}
+.modal-comment::placeholder {
+  color: rgba(46, 47, 66, 0.4);
+
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
 }
