--- a/css/styles.css
+++ b/css/styles.css
@@ -524,6 +524,10 @@ img {
   pointer-events: none;
 }
 .backdrop.is-open {
+  position: fixed;
+  top: 0;
+  left: 0;
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -565,8 +569,18 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+.close-icon {
+  fill: #2e2f42;
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 .close-btn:active {
-  background-color: #ffffff;
+  background-color: #404bbf;
+}
+.close-btn:active .close-icon {
+  fill: #ffffff;
 }
 .modal-title {
   margin-bottom: 16px;
@@ -593,8 +607,14 @@ img {
 
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
+  outline: transparent;
 
   margin-bottom: 8px;
+  padding-left: 38px;
+
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .input-wrapper {
   position: relative;
@@ -603,6 +623,19 @@ img {
   position: absolute;
   top: 8px;
   left: 16px;
+  fill: #2e2f42;
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input:focus,
+.modal-input:active {
+  border-color: #4d5ae5;
+}
+.modal-input:focus + .input-icon,
+.modal-input:active + .input-icon {
+  fill: #4d5ae5;
 }
 .modal-comment {
   width: 100%;
@@ -614,6 +647,11 @@ img {
 
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
+  outline: transparent;
+
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-comment::placeholder {
   color: rgba(46, 47, 66, 0.4);
@@ -621,4 +659,55 @@ img {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
+}
+.modal-comment:focus,
+.modal-comment:active {
+  border-color: #4d5ae5;
+}
+/* checkbox */
+.form-agreement {
+  display: block;
+  margin-bottom: 24px;
+
+  color: #8e8f99;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+}
+.agreement-checkbox {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 16px;
+  height: 16px;
+
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+
+  transition-property: background-color border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  cursor: pointer;
+}
+.checkbox:checked + .agreement-checkbox {
+  background-color: #404bbf;
+  border-color: transparent;
+}
+.agreement-icon {
+  fill: #fff;
+  opacity: 0;
+
+  transition-property: opacity;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox:checked + .agreement-checkbox > .agreement-icon {
+  opacity: 1;
+}
+
+.agreement-link {
+  text-decoration-line: underline;
+  color: #4d5ae5;
 }
