--- a/css/styles.css
+++ b/css/styles.css
@@ -424,7 +424,7 @@ img {
   display: flex;
   align-items: baseline;
 }
-.footer .column-1 {
+.footer .column-one {
   margin-right: 120px;
 }
 
@@ -467,7 +467,7 @@ img {
 .footer .socials-link:focus {
   background-color: #31d0aa;
 }
-.footer .column-3 {
+.footer .column-three {
   margin-left: auto;
 }
 /* footer-form */
@@ -501,7 +501,10 @@ img {
 .subscribe-btn {
   display: flex;
   align-items: center;
-  gap: 16px;
+  justify-content: center;
+
+  min-width: 165px;
+  height: 40;
 
   color: #fff;
   text-align: center;
@@ -509,6 +512,7 @@ img {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  border: none;
   border-radius: 4px;
   background: #4d5ae5;
 
@@ -516,6 +520,7 @@ img {
 }
 .subscribe-icon {
   fill: currentColor;
+  margin-left: 16px;
 }
 /* modal wimdows */
 .backdrop {
@@ -528,46 +533,55 @@ img {
   top: 0;
   left: 0;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 
   background-color: rgba(46, 47, 66, 0.4);
 
   opacity: 1;
   visibility: visible;
   pointer-events: initial;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
   width: 408px;
-  height: 584px;
-  padding: 24px;
+  min-height: 584px;
+  padding: 72px 24px 24px 24px;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
 
   border-radius: 4px;
   background: #fcfcfc;
   box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+
   display: flex;
   align-items: center;
   justify-content: center;
 
   width: 24px;
   height: 24px;
-  margin-left: auto;
-  margin-bottom: 24px;
+
+  padding: 0;
 
   background-color: #e7e9fc;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
 
-  transition-property: background-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .close-icon {
   fill: #2e2f42;
@@ -576,10 +590,14 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.close-btn:active {
+.close-btn:active,
+.close-btn:hover,
+.close-btn:focus {
   background-color: #404bbf;
+  border: none;
 }
-.close-btn:active .close-icon {
+.close-btn:hover .close-icon,
+.close-btn:focus .close-icon {
   fill: #ffffff;
 }
 .modal-title {
@@ -590,6 +608,9 @@ img {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+.field-wrapper {
+  margin-bottom: 8px;
 }
 .modal-label {
   display: block;
@@ -608,8 +629,8 @@ img {
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   outline: transparent;
+  background-color: transparent;
 
-  margin-bottom: 8px;
   padding-left: 38px;
 
   transition-property: border-color;
@@ -621,7 +642,9 @@ img {
 }
 .input-icon {
   position: absolute;
-  top: 8px;
+  top: 50%;
+  transform: translateY(-50%);
+
   left: 16px;
   fill: #2e2f42;
 
@@ -637,17 +660,25 @@ img {
 .modal-input:active + .input-icon {
   fill: #4d5ae5;
 }
+.comment-wrapper {
+  margin-bottom: 16px;
+}
 .modal-comment {
   width: 100%;
   height: 120px;
   resize: none;
 
   padding: 8px 16px;
-  margin-bottom: 16px;
 
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   outline: transparent;
+
+  color: rgba(46, 47, 66, 0.4);
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  background-color: transparent;
 
   transition-property: border-color;
   transition-duration: 250ms;
@@ -665,10 +696,10 @@ img {
   border-color: #4d5ae5;
 }
 /* checkbox */
-.form-agreement {
-  display: block;
+.checkbox-wrapper {
   margin-bottom: 24px;
-
+}
+.form-agreement {
   color: #8e8f99;
   font-size: 12px;
   line-height: 1.17;
@@ -691,20 +722,19 @@ img {
 
   cursor: pointer;
 }
-.checkbox:checked + .agreement-checkbox {
+.checkbox:checked + .form-agreement > .agreement-checkbox {
   background-color: #404bbf;
   border-color: transparent;
 }
 .agreement-icon {
-  fill: #fff;
-  opacity: 0;
+  fill: transparent;
 
-  transition-property: opacity;
+  transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.checkbox:checked + .agreement-checkbox > .agreement-icon {
-  opacity: 1;
+.checkbox:checked + .form-agreement > .agreement-checkbox > .agreement-icon {
+  fill: #fff;
 }
 
 .agreement-link {
