--- a/css/styles.css
+++ b/css/styles.css
@@ -715,26 +715,19 @@ img {
 
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
+  fill: transparent;
 
-  transition-property: background-color border-color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   cursor: pointer;
 }
 .checkbox:checked + .form-agreement > .agreement-checkbox {
   background-color: #404bbf;
   border-color: transparent;
-}
-.agreement-icon {
-  fill: transparent;
-
-  transition-property: fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.checkbox:checked + .form-agreement > .agreement-checkbox > .agreement-icon {
-  fill: #fff;
+  fill: #f4f4fd;
+  border: none;
 }
 
 .agreement-link {
